hphp/test/quick/typechecks-obj.php.expectf
object(C) (0) {
}
object(D) (0) {
}
NULL

Catchable fatal error: Argument 1 to f() must be of type ?C, stdClass given in %s on line 14
